Fix alignment issue
Fixes #1

--- a/login-box.css
+++ b/login-box.css
@@ -12,6 +12,8 @@
 }
 
 :host > paper-input {
+  margin-left: auto;
+  margin-right: auto;
   width: 90%;
 }
 
